--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1807,7 +1807,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #8829ff;
+  background: #f1ff24;
 }
 .links-of-blogroll {
   font-size: 13px;
